--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -25,6 +25,17 @@
         <div class="job-description">
           Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development (coding) and presentation of web components and digital
           experiences.
+          <div class="tools">
+            Things Learned:
+            <ul>
+              <li>Jira</li>
+              <li>Airtable</li>
+              <li>a janky-AF CMS/LMS</li>
+              <li>Adobe XD</li>
+              <li>Jquery</li>
+              <li>Good managers and a tight-knit team make an otherwise unsatisfactory job, worth sticking with.</li>
+              </ul>
+            </div>
         </div>
       </div>
 
@@ -33,7 +44,18 @@
         <div class="job-subTitle">thecampus.market | 2018 – Present</div>
         <div class="job-description">
           My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
-          the design, except for the terrible logo, and all of the UI engineering.
+          the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and facebook marketplace.
+          <div class="tools">
+            Things Learned:
+            <ul>
+              <li>Angular</li>
+              <li>Trello</li>
+              <li>Adobe XD</li>
+              <li>Git</li>
+              <li>Laughter while working does not make the work any easier</li>
+              <li>The answer to Provo's housing crisis is not another hyper-specific exclusive web-app</li>
+              </ul>
+            </div>
         </div>
       </div>
 
@@ -43,7 +65,15 @@
         <div class="job-description">
           Working solo for clients like Artemis Health, CityGro, PrimeAV and many others. User testing, creating mocks, designing interactions, coding websites and portals, and marketing landing pages, and whatever else I wanted to do instead of
           have a life outside of work.
-
+          <div class="tools">
+            Things Learned:
+            <ul>
+              <li>HTML/CSS</li>
+              <li>Javascript</li>
+              <li>Sketch</li>
+              <li>When it rains consultant work it pours, and you will burn out fast trying to work for everyone.</li>
+              </ul>
+            </div>
         </div>
       </div>
 
