breadcrumb nav is in

--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,10 @@
 <section id="details">
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Work</a></li>
+      <li class="breadcrumb-item active" aria-current="page">[activeProject]</li>
+    </ol>
+  </nav>
   <div class="intro container">
     <div class="row flex mt-5 mb-5">
 
