--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,5 +1,5 @@
 <div id="projectStream" class="row flex p-5 no-gutters" *ngIf="projects">
-  <a class="col-6 col-md-2 p-3" *ngFor="let project of projects.data" target="_blank" [routerLink]="['/project-details']" [fragment]='project.url'> <!--href="{{project.liveLink}}"-->
+  <a class="col-6 col-md-2 p-3" *ngFor="let project of projects.data"  [routerLink]="['/project-details']" [fragment]='project.url'> <!--href="{{project.liveLink}}"-->
     <div class="project-container" (click)="seeProject()" (projectClicked)='onProjectClicked($event)'>
       <div class="p-header" [ngStyle]="{'background-image': 'url(' + project.header + ')'}"></div>
       <div class="p-logo" [ngStyle]="{'background-image': 'url(' + project.logo + ')'}"></div>
