accordion is styled

--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -9,22 +9,21 @@
     <div class="row flex mt-5 mb-5">
 
       <div class="copy col-10 col-md-6">
-        <h1>Project Name</h1>
-        {{this.project}}
+        <h1>[Project Name]</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
         <div class="accordion-wrapper">
 
           <!-- ACCORDION SECTION -->
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-label">
-              <i class="fa-bb fad fa-plus fa-fw"></i>
-              01title
+              <i class="fa-bb fas fa-plus fa-fw"></i>
+              Problem
             </div>
             <div class="accordion-text">
               <div class="accordion-text-inner">
-                01content
+                <p>01content</p>
               </div>
             </div>
           </div>
@@ -33,16 +32,19 @@
           <!-- ACCORDION SECTION -->
           <div class="accordion closed">
             <div class="accordion-label">
-              <i class="fa-bb fad fa-plus fa-fw"></i>
-              02title
+              <i class="fa-bb fas fa-plus fa-fw"></i>
+                Plan
             </div>
             <div class="accordion-text">
               <div class="accordion-text-inner">
-                02content
+                <p>
+                  02content
+                </p>
               </div>
             </div>
           </div>
           <!-- x: ACCORDION SECTION -->
+
 
         </div>
 
