--- a/src/app/project-details/project-details.component.scss
+++ b/src/app/project-details/project-details.component.scss
@@ -1,3 +1,4 @@
+@import '../../mixins.scss';
 section#details {
   .breadcrumb {
     border-radius: 0;
@@ -49,4 +50,111 @@ section#details {
       opacity: 0.5;
     }
   }
+}
+
+/* ACCORDIONS ___________________________________________________________________________ */
+
+.accordion-label {
+
+  .fa-bb {
+    @include transition(transform .20s ease-in-out);
+    @include rotate(90deg);
+
+    font-size: 110%;
+    padding: 0.5rem;
+  }
+}
+
+.closed {
+  .accordion-label {
+    .fa-bb {
+      @include transform(none);
+    }
+  }
+}
+
+.accordion-text {
+  transition: all 1.0s ease 0s;
+  -webkit-transition: all 1.0s ease 0s;
+  transition-delay: 0.25s;
+  overflow: hidden;
+    cursor: auto;
+    height: auto;
+  max-height: 300px;
+  margin: 0px;
+  padding: 0px;
+}
+.closed .accordion-text {
+  max-height: 0px;
+  transition: all 0.65s ease 0s;
+  -webkit-transition: all 0.65s ease 0s;
+  transition-delay: 0s;
+}
+.accordion-label {
+  display: inline-flex;
+  align-items: center;
+  color: #000;
+  padding: 5px 10px;
+  transition: all 0.65s ease 0s;
+  -webkit-transition: all 1.0s ease 0s;
+}
+.accordion-label:hover {
+  color: #000;
+  cursor:pointer;
+}
+.closed .accordion-label {
+  color: #999;
+}
+.accordion-text .accordion-text-inner p {
+  padding: 5px 15px 15px;
+  margin: 0px;
+  font-size: 0.9em;
+  transition: all 0.65s ease 0s;
+  transition-delay: 0.4s;
+  opacity: 1;
+}
+.closed .accordion-text .accordion-text-inner p {
+  opacity: 0;
+  transition: all 0.65s ease 0s;
+  transition-delay: 0s;
+}
+
+
+/* X: ACCORDIONS ___________________________________________________________________________ */
+
+// Accordion
+.accordion-text .accordion-text-inner p {
+    padding: 5px 15px 15px;
+    margin: 0px;
+    font-size: 0.9em;
+    -webkit-transition: all 0.65s ease 0s;
+    transition: all 0.65s ease 0s;
+    -webkit-transition-delay: 0.4s;
+    transition-delay: 0.4s;
+    opacity: 1;
+}
+.accordion-text-inner p {
+    border-left: 1px solid #c6c6c6;
+    margin-left: 14px !important;
+}
+
+.accordion-label {
+  font-weight: 600;
+}
+
+.accordion-label:hover {
+  color: white;
+}
+
+/* Pluses to X's */
+.accordion:not(.closed) i.fa-plus {
+  transform: rotate(135deg);
+  color: darkred;
+}
+
+i.fa-plus {
+  padding: 0;
+  margin-right: 0.5em;
+  margin-left: -0.5rem;
+  color: #8a9c04;
 }
