--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -3,7 +3,8 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Work</a></li>
-      <li class="breadcrumb-item active" aria-current="page">{{this.activeProject}}</li>
+      <!-- <li class="breadcrumb-item active" aria-current="page">{{this.activeProject}}</li> -->
+      <li class="breadcrumb-item active" aria-current="page">{{project.name}}</li>
     </ol>
   </nav>
   <div class="intro container">
@@ -54,7 +55,7 @@
 
       </div>
       <div class="col-0 col-md-6 preview-holder">
-        <iframe id="iframePreview" src="{{project.liveLink}}"></iframe>
+        <iframe id="iframePreview" [src]="project.liveLink | safe"></iframe>
       </div>
     </div>
   </div>
