--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -87,7 +87,7 @@
     </div>
     <div class="other-projects"></div>
   </div>
-  <div class="stats dark-mode">
+  <div class="stats">
     <div class="row flex no-gutters">
       <h5 class="p-3">Stats, for nerds</h5>
       <div class="col-12">
