--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -19,7 +19,7 @@ section#contact {
     .squircle {
       margin-bottom:1rem;
       i {
-        color: #2b7794;
+        color: #fff;
         font-size: 3em;
         align-self: center;
         justify-content: center;
