--- a/src/app/project/project.component.scss
+++ b/src/app/project/project.component.scss
@@ -23,7 +23,7 @@ div#projectStream {
       max-height: 450px;
       height: 33vw;
       position: relative;
-      opacity: 0.8;
+      opacity: 1;
       transition-duration: 0.25s;
 
       .p-logo {
@@ -44,7 +44,7 @@ div#projectStream {
         // filter: blur(1px);
         background-position: center;
         background-size: cover;
-        opacity: 0.6;
+        opacity: .7;
         transition-duration: 0.25s;
       }
 
