dark mode is back boys, now 20% less contrasty. much easier on the eyes.

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -42,7 +42,7 @@ section#about {
             content: "\f058";
             font-family: "Font Awesome 5 Free";
             margin-right: 0.5rem;
-            color: #8a9c04;
+            color: #4ecca3;
           }
         }
       }
