--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -13,6 +13,11 @@
     }
   }
 
+&.navbar-dark{
+  background-color:#393e46 !important;
+  color:#fff;
+}
+
   .search-titles {
     justify-self: flex-end;
   }
