--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -60,6 +60,8 @@ section#about {
         // janky support for resizing screen
         font-size: calc(25vw / 13.5);
         writing-mode: vertical-lr;
+        -webkit-writing-mode: vertical-lr;
+        -ms-writing-mode: vertical-lr;
         text-orientation: upright;
         user-select: none;
         text-transform: uppercase;
@@ -69,7 +71,7 @@ section#about {
     .wordsearch-key {
       opacity: 0.5;
       padding: 1rem 0;
-      transform: rotate(180deg);
+      @include rotate(180deg);
     }
   }
 }
@@ -81,8 +83,7 @@ section#about {
   display: block;
   position: absolute;
   left: -4.1rem;
-  background-color: #000;
-  // DARK MODE
+  background-color: #000; // DARK MODE
   //background-color: #001f26;
 }
 
@@ -92,18 +93,15 @@ section#about {
   width: 2rem;
   position: absolute;
   left: -4.95rem;
-  border: 3px solid #fff;
-  // DARK MODE
+  border: 3px solid #fff; // DARK MODE
   //border: 3px solid #052029;
   border-radius: 50%;
   background: #001f26;
 }
 
 .resume-item.past:before {
-   background: #fff;
-  // DARK MODE
+  background: #fff; // DARK MODE
   //background: #002c36;
-   border: 5px solid #000;
-  // DARK MODE
+  border: 5px solid #000; // DARK MODE
   //border: 5px solid #001f26;
 }
