created mocks section re-colored some things removed FB from contact. cleaned db up a little bit

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <section id="about" class="">
   <div class="copy row flex no-gutters">
     <div class="copy-body d-flex col-10 col-md-6">
-      <img class="avatar-image d-none d-md-block" src="../../assets/profile-pic.jpg" />
+      <img class="avatar-image d-none d-md-block" src="../../assets/profile-pic2.jpg" />
       <div class="copy-body">
 
         <h1>Spencer Dixon</h1>
