--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -6,12 +6,17 @@
         Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and clearly communicate my worth as a designer. If you hate it – that's fine – I'll have redesigned it before
         the new year.
       </p>
-      <p class="text-info">
+      <p class="text-primary">
         Keep scrolling to check out some of my neat work.
       </p>
     </div>
   </div>
 </section>
 <section id="projects">
+  <div class="sectionTitle">Sites:</div>
   <app-project></app-project>
-  </section>
+</section>
+<section id="mocks pt-5">
+  <div class="sectionTitle">Mocks / Challenges:</div>
+  <app-mock></app-mock>
+</section>
