--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,4 @@
-<span *ngFor="let project of projects?.data">
+<span *ngFor="let project of projects.data">
 <section id="details"  *ngIf="project.path == this.activeProject">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
