other pjx still breaks, updated refs to old url, updated some color things and some text changes, sent to alex to proof read

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,8 +10,8 @@
         </p>
         <hr />
         <div class="btn-group">
-          <a href="assets/downloads/19-05-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
-          <a href="assets/downloads/19-05-CL.pdf" download target="_blank" class="btn btn-secondary"><i class="fas fa-file-download"></i>Cover Letter</a>
+          <a href="assets/downloads/20-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
+          <a href="assets/downloads/20-CL.pdf" download target="_blank" class="btn btn-secondary"><i class="fas fa-file-download"></i>Cover Letter</a>
           <a href="https:/instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-secondary d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a></div>
       </div>
     </div>
@@ -30,10 +30,12 @@
             <ul>
               <li>Jira</li>
               <li>Airtable</li>
+              <li class="partial">React</li>
               <li>a janky-AF CMS/LMS</li>
+              <li>Git</li>
               <li>Adobe XD</li>
               <li>Jquery</li>
-              <li>Good managers and a tight-knit team make an otherwise unsatisfactory job, worth sticking with.</li>
+              <li>Good managers and a tight-knit team make an otherwise unfulfilling job, worth sticking with.</li>
               </ul>
             </div>
         </div>
@@ -41,7 +43,7 @@
 
       <div class="resume-item">
         <h2 class="job-title">UX/UI Developer</h2>
-        <div class="job-subTitle">thecampus.market | 2018 – Present</div>
+        <div class="job-subTitle">thecampus.market (expired)| 2018 – Present</div>
         <div class="job-description">
           My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
           the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and facebook marketplace.
@@ -53,7 +55,7 @@
               <li>Adobe XD</li>
               <li>Git</li>
               <li>Laughter while working does not make the work any easier</li>
-              <li>The answer to Provo's housing crisis is not another hyper-specific exclusive web-app</li>
+              <li>The answer to Provo's housing crisis is not another hyper-specific, exclusive web-app</li>
               </ul>
             </div>
         </div>
@@ -71,6 +73,8 @@
               <li>HTML/CSS</li>
               <li>Javascript</li>
               <li>Sketch</li>
+              <li>Photoshop</li>
+              <li>Illustrator</li>
               <li>When it rains consultant work it pours, and you will burn out fast trying to work for everyone.</li>
               </ul>
             </div>
