--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -63,7 +63,7 @@
           <!-- x: ACCORDION SECTION -->
 
         </div>
-        <a href="{{project.url}}" target="_blank" class="btn btn-primary">Check it out <i class="fas fa-arrow-right"></i></a>
+        <a href="{{project.url}}" target="_blank" class="btn btn-primary">Check it out&nbsp;<i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="col-0 col-md-6 preview-holder">
         <!-- <iframe id="iframePreview" [src]="project.url | safe"></iframe> -->
@@ -99,7 +99,7 @@
     </div>
     <div class="other-projects"></div>
   </div>
-  <div class="stats">
+  <div class="stats d-none">
     <div class="row flex no-gutters">
       <h5 class="p-3">Stats, for nerds</h5>
       <div class="col-12">
