--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -3,7 +3,7 @@
     <div class="copy-body col-10 col-md-6">
       <h1>Oh, hi. 👋🏻</h1>
       <p>
-        Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and clearly communicate my worth as a designer. If you hate it – that's fine – I'll have redesigned it before
+        Welcome to my portfolio site and thank you for taking the time to investigate me, beyond my resumé. I made this website to display and more clearly communicate my worth as a designer. If you hate it – that's fine – I'll have redesigned it before
         the new year.
       </p>
       <p class="text-primary">
@@ -13,10 +13,10 @@
   </div>
 </section>
 <section id="projects">
-  <div class="sectionTitle">Sites:</div>
+  <div class="sectionTitle">Websites</div>
   <app-project></app-project>
 </section>
 <section id="mocks pt-5">
-  <div class="sectionTitle">Mocks / Challenges:</div>
+  <div class="sectionTitle">Other</div>
   <app-mock></app-mock>
 </section>
