--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,6 +1,6 @@
 <div id="projectStream" class="row flex p-5 no-gutters" *ngIf="projects">
-  <a class="col-6 col-md-2 p-3" *ngFor="let project of projects.data"  [routerLink]="['/project-details']" [fragment]='project.path'> <!--href="{{project.liveLink}}"-->
-    <div class="project-container" (projectClicked)='onProjectClicked($event)'>
+  <a class="col-6 col-md-2 p-3" *ngFor="let project of projects.data"  [routerLink]="['/project-details']" [fragment]='project.path'>
+    <div class="project-container"> <!--(projectClicked)='onProjectClicked($event)'-->
       <div class="p-header" [ngStyle]="{'background-image': 'url(' + project.header + ')'}"></div>
       <div class="p-logo" [ngStyle]="{'background-image': 'url(' + project.logo + ')'}"></div>
       <div class="p-id">{{project.id}}</div>
